# hirefire

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat  procs.rst
hirefire/: __init__.py  utils.py
hirefire/contrib/: utils.py
hirefire/contrib/django/: middleware.py  utils.py
hirefire/contrib/flask/: blueprint.py
hirefire/contrib/tornado/: handlers.py
hirefire/procs/: __init__.py  celery.py  hotqueue.py  huey.py  pq.py  queues.py  rq.py
tests/contrib/django/: test_middleware.py  test_rq_proc.py
tests/contrib/django/testapp/: __init__.py  procs.py  rq_test_procs.py  settings.py  urls.py
tests/contrib/flask/: test_blueprint.py
