[global]
setup-hooks =
    hirefire.version_hook

[metadata]
name = HireFire
author = Jannis Leidel
author-email = jannis@leidel.info
summary = A Python lib to integrate with the HireFire service --
          The Heroku Proccess Manager.
description-file = README.rst
home-page = http://hirefire.readthedocs.org/
project-url =
    Github, https://github.com/jezdez/hirefire/
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Utilities
requires-dist =
    six

[files]
packages =
    hirefire
    hirefire.procs
    hirefire.contrib
    hirefire.contrib.django
extra_files =
    README.rst
    AUTHORS.rst

[backwards_compat]
zip_safe = False
